# Silent-Breath-Online

./: .gitignore  3AGENT_COMPRESSED_REPORT.md  CACHE_COHERENCY.md  COMPILATION_REPORT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SHADOW_REGISTERS.md  STREAMING_GUIDE.md  agent1_compressed.dsl  agent2_compressed.dsl  agent3_compressed.dsl
.claude/: SKILLS_CREATED.md
.github/: CI_BADGES.md  pre-commit-hook.sh
.github/workflows/: pr-checks.yml.disabled  rust-ci.yml.disabled
baremetal-abi/: Cargo.toml  README.md  linker.ld  x86_64-i9-12900k.json
baremetal-abi/.cargo/: config.toml
baremetal-abi/docs/: ABI_SPECIFICATION.md  GETTING_STARTED.md
baremetal-abi/src/: abi.rs  boot.rs  cpu.rs  interrupts.rs  lib.rs  memory.rs  performance.rs
src/: cache_coherency.rs  ecc_handler.rs  fuse_manager.rs  lib.rs  mmio.rs  runtime.rs  shadow_mmio.rs  shadow_register.rs  shadow_runtime.rs  state_machine.rs  sync_manager.rs  version_control.rs
vercel-viewer/: README.md  index.html  vercel.json
