[package]
name = "i9-12900k-baremetal-abi"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use the existing Silent-Breath-Online cache coherency system
silent-breath-mmio = { path = ".." }

# Bare-metal x86-64 support
x86_64 = { version = "0.15", default-features = false, features = ["instructions", "abi_x86_interrupt"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1

# Library configuration
[lib]
name = "i9_12900k_baremetal_abi"
path = "src/lib.rs"

# Binary targets
[[bin]]
name = "minimal-kernel"
path = "src/bin/minimal.rs"
